third commit created all the pages with images

--- a/bathroom.html
+++ b/bathroom.html
@@ -11,11 +11,15 @@
 <body>
     <ul>
         <li><a href="index.html">Home</a></li>
-        <li><a href="livingroom.html">Livingroom</a></li>
+        <li><a href="livingroom.html">Living room</a></li>
         <li><a href="kitchen.html">Kitchen</a></li>
         <li><a href="bathroom.html">Bathroom</a></li>
-        <li><a href="contact.html">Contact</a></li>
+        <li><a href="bedroom.html">Bedroom</a></li>
+        <li><a href="contact.html">Contact realtor</a></li>
       </ul>
+
+      <img class="fit"src= "/users/felixwillborg/desktop/images/bath1.jpg">
+ 
 
 </body>
 
