--- a/livingroom.html
+++ b/livingroom.html
@@ -11,14 +11,20 @@
 <body>
     <ul>
         <li><a href="index.html">Home</a></li>
-        <li><a href="livingroom.html">Livingroom</a></li>
+        <li><a href="livingroom.html">Living room</a></li>
         <li><a href="kitchen.html">Kitchen</a></li>
         <li><a href="bathroom.html">Bathroom</a></li>
-        <li><a href="contact.html">Contact</a></li>
+        <li><a href="bedroom.html">Bedroom</a></li>
+        <li><a href="contact.html">Contact realtor</a></li>
       </ul>
 
+      <img class="fit"src= "/users/felixwillborg/desktop/images/living1.jpg">
+      <img class="fit"src= "/users/felixwillborg/desktop/images/living2.jpg">
+      <img class="fit"src= "/users/felixwillborg/desktop/images/living3.jpg">
+      <img class="fit"src= "/users/felixwillborg/desktop/images/living4.jpg">
+      <img class="fit"src= "/users/felixwillborg/desktop/images/living5.jpg">
+      <img class="fit"src= "/users/felixwillborg/desktop/images/living6.jpg">
 
-      <h1>Inspiraton</h1>
 </body>
 
 </html>
