commit five changed font and font size

--- a/kitchen.html
+++ b/kitchen.html
@@ -26,7 +26,7 @@
 </body>
 
 <footer>
-    <p>If you wish for this apartment to be yours please click <a href="https://www.hemnet.se/bostad/lagenhet-2rum-bromma-ulvsunda-stockholms-kommun-lovasvagen-21-16737419">here</a>
+    <p>IF YOU WISH FOR THIS APARTMENT TO BE YOURS CLICK <a href="https://www.hemnet.se/bostad/lagenhet-2rum-bromma-ulvsunda-stockholms-kommun-lovasvagen-21-16737419" target="_blank">HERE</a>
 </footer>
 
 </html>
