sixth commit updated Contact page

--- a/contact.html
+++ b/contact.html
@@ -18,11 +18,22 @@
         <li><a href="contact.html">Contact realtor</a></li>
       </ul>
 
+      <br>
+      <br>
+      <br>
+      <br>
+      <br>
+      <br>
+      <br>
+      <br>
+      <br>
+      <br>
+      <br>
+      <br>
+      <br>
+      <p> You can find the realtor's contact information on <a href= "https://www.husmanhagberg.se/objekt/annons/OBJ14823_1769935095?alla-bilder=true&source=Hemnet#bilder" target="_blank">husmanhagberg</a> </p>
+ 
 
 </body>
-
-<footer>
-    <p>IF YOU WISH FOR THIS APARTMENT TO BE YOURS CLICK <a href="https://www.hemnet.se/bostad/lagenhet-2rum-bromma-ulvsunda-stockholms-kommun-lovasvagen-21-16737419" target="_blank">HERE</a>
-</footer>
 
 </html>
