added all the pictures

--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
         <li><a href="contact.html">Contact realtor</a></li>
       </ul>
      
-<img class="fit"src= "/users/felixwillborg/desktop/images/outside.jpg" alt= "apartment building">
+<img class="fit"src= "/images/outside.jpg" alt= "apartment building">
 <div class="centered">LÖVÅSVÄGEN 21,BROMMA</div>
 </div>
 
