changed location on pictures

--- a/Bedroom.html
+++ b/Bedroom.html
@@ -14,12 +14,12 @@
         <li><a href="livingroom.html">Living room</a></li>
         <li><a href="kitchen.html">Kitchen</a></li>
         <li><a href="bathroom.html">Bathroom</a></li>
-        <li><a href="bedroom.html">Bedroom</a></li>
+        <li><a href="Bedroom.html">Bedroom</a></li>
         <li><a href="contact.html">Contact realtor</a></li>
       </ul>
 
-      <img class="fit"src= "/users/felixwillborg/desktop/images/bed2.jpg">
-      <img class="fit"src= "/users/felixwillborg/desktop/images/bed1.jpg">
+      <img class="fit"src= "/Users/felixwillborg/felixoppongwillborg.github.io/Images/bed2.jpg">
+      <img class="fit"src= "/Users/felixwillborg/felixoppongwillborg.github.io/Images/bed1.jpg">
 
 
 </body>
