--- a/kitchen.html
+++ b/kitchen.html
@@ -18,10 +18,10 @@
         <li><a href="contact.html">Contact realtor</a></li>
       </ul>
 
-      <img class="fit"src= "/users/felixwillborg/desktop/images/kitchen1.jpg">
-      <img class="fit"src= "/users/felixwillborg/desktop/images/kitchen2.jpg">
-      <img class="fit"src= "/users/felixwillborg/desktop/images/kitchen3.jpg">
-      <img class="fit"src= "/users/felixwillborg/desktop/images/kitchen4.jpg">
+      <img class="fit"src= "/Users/felixwillborg/felixoppongwillborg.github.io/Images/Kitchen1.jpg">
+      <img class="fit"src= "/Users/felixwillborg/felixoppongwillborg.github.io/Images/kitchen2.jpg">
+      <img class="fit"src= "/Users/felixwillborg/felixoppongwillborg.github.io/Images/kitchen3.jpg">
+      <img class="fit"src= "/Users/felixwillborg/felixoppongwillborg.github.io/Images/kitchen4.jpg">
 
 </body>
 
