--- a/bathroom.html
+++ b/bathroom.html
@@ -18,7 +18,7 @@
         <li><a href="contact.html">Contact realtor</a></li>
       </ul>
 
-      <img class="fit"src= "/users/felixwillborg/desktop/images/bath1.jpg">
+      <img class="fit"src= "/Users/felixwillborg/felixoppongwillborg.github.io/Images/bath1.jpg">
  
 
 </body>
