changed the pictures

--- a/kitchen.html
+++ b/kitchen.html
@@ -18,11 +18,11 @@
         <li><a href="contact.html">Contact realtor</a></li>
       </ul>
 
-      <img class="fit"src= "/Users/felixwillborg/felixoppongwillborg.github.io/Images/Kitchen1.jpg">
-      <img class="fit"src= "/Users/felixwillborg/felixoppongwillborg.github.io/Images/kitchen2.jpg">
-      <img class="fit"src= "/Users/felixwillborg/felixoppongwillborg.github.io/Images/kitchen3.jpg">
-      <img class="fit"src= "/Users/felixwillborg/felixoppongwillborg.github.io/Images/kitchen4.jpg">
-
+      <img class="fit"src= "Images/Kitchen1.jpg">
+      <img class="fit"src= "Images/kitchen2.jpg">
+      <img class="fit"src= "Images/kitchen3.jpg">
+      <img class="fit"src= "Images/kitchen4.jpg">
+      
 </body>
 
 <footer>
