--- a/Bedroom.html
+++ b/Bedroom.html
@@ -18,8 +18,8 @@
         <li><a href="contact.html">Contact realtor</a></li>
       </ul>
 
-      <img class="fit"src= "/Users/felixwillborg/felixoppongwillborg.github.io/Images/bed2.jpg">
-      <img class="fit"src= "/Users/felixwillborg/felixoppongwillborg.github.io/Images/bed1.jpg">
+      <img class="fit"src= "Images/bed2.jpg">
+      <img class="fit"src= "Images/bed1.jpg">
 
 
 </body>
