--- a/livingroom.html
+++ b/livingroom.html
@@ -18,12 +18,12 @@
         <li><a href="contact.html">Contact realtor</a></li>
       </ul>
 
-      <img class="fit"src= "/Users/felixwillborg/felixoppongwillborg.github.io/Images/Living1.jpg">
-      <img class="fit"src= "/Users/felixwillborg/felixoppongwillborg.github.io/Images/living2.jpg">
-      <img class="fit"src= "/Users/felixwillborg/felixoppongwillborg.github.io/Images/living3.jpg">
-      <img class="fit"src= "/Users/felixwillborg/felixoppongwillborg.github.io/Images/living4.jpg">
-      <img class="fit"src= "/Users/felixwillborg/felixoppongwillborg.github.io/Images/living5.jpg">
-      <img class="fit"src= "/Users/felixwillborg/felixoppongwillborg.github.io/Images/living6.jpg">
+      <img class="fit"src= "Images/Living1.jpg">
+      <img class="fit"src= "Images/living2.jpg">
+      <img class="fit"src= "Images/living3.jpg">
+      <img class="fit"src= "Images/living4.jpg">
+      <img class="fit"src= "Images/living5.jpg">
+      <img class="fit"src= "mages/living6.jpg">
 
 </body>
 
