--- a/livingroom.html
+++ b/livingroom.html
@@ -14,7 +14,7 @@
         <li><a href="livingroom.html">Living room</a></li>
         <li><a href="kitchen.html">Kitchen</a></li>
         <li><a href="bathroom.html">Bathroom</a></li>
-        <li><a href="bedroom.html">Bedroom</a></li>
+        <li><a href="Bedroom.html">Bedroom</a></li>
         <li><a href="contact.html">Contact realtor</a></li>
       </ul>
 
