--- a/livingroom.html
+++ b/livingroom.html
@@ -10,11 +10,12 @@
 
 <body>
     <ul>
+      <ul>
         <li><a href="index.html">Home</a></li>
         <li><a href="livingroom.html">Living room</a></li>
         <li><a href="kitchen.html">Kitchen</a></li>
         <li><a href="bathroom.html">Bathroom</a></li>
-        <li><a href="Bedroom.html">Bedroom</a></li>
+        <li><a href="bedroom.html">Bedroom</a></li>
         <li><a href="contact.html">Contact realtor</a></li>
       </ul>
 
@@ -23,7 +24,7 @@
       <img class="fit"src= "Images/living3.jpg">
       <img class="fit"src= "Images/living4.jpg">
       <img class="fit"src= "Images/living5.jpg">
-      <img class="fit"src= "mages/living6.jpg">
+      <img class="fit"src= "Images/living6.jpg">
 
 </body>
 
